<resources>
    <string name="app_name">MakeKit</string>
    <string name="air_bit">Air:Bit</string>
    <string name="hover_bit">Hover:Bit</string>
    <string name="paired_devices">Paired devices</string>
    <string name="find_bluetooth_device">Find device</string>
    <string name="get_paired_devices">Show paired devices</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="connect_to_microbit">Connect to Micro:Bit</string>
    <string name="game_pad">Gamepad</string>
    <string name="scan">Scan</string>
    <string name="title_new_devices">New Micro:Bit devices</string>
    <string name="title_paired_devices">Paired Micro:Bit devices</string>
    <string name="scanning">Scanning...</string>
    <string name="instructions">Pull the screen from the left side towards the right side to open up the menu. From there you can connect to a Micro:Bit and access the gamepad and settings.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="scanning_for_paired_microbits">Scanning for paired Micro:Bit devices</string>
    <string name="scanning_for_all_microbits">Scanning for all Micro:bit devices</string>
    <string name="click_on_microbit_to_connect">Click on Micro:Bit to connect</string>
    <string name="find_paired_microbits">Find paired Micro:Bit devices</string>
    <string name="scan_for_microbit">Scan for Micro:Bit</string>
    <string name="scan_for_paired_microbits">Scan for paired Micro:Bits</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="disconnect">Disconnect</string>
    <string name="bonded">\" (BONDED)\"</string>
    <string name="unknown_device">Unknown device</string>
    <string name="gyroscope_steering">Gyroscope steering</string>
    <string name="stop">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="airbit">Air:bit</string>
    <string name="hoverbit">Hover:bit</string>
    <string name="_0">0</string>
    <string name="gamepad">Gamepad</string>
    <string name="connect_to_micro_bit">Connect to Micro:bit</string>
    <string name="PitchBackwards">Pitch backwards</string>
    <string name="ThrottleDown">Throttle down</string>
    <string name="ThrottleUp">Throttle up</string>
    <string name="YawLeft">Yaw left</string>
    <string name="YawRight">Yaw right</string>
    <string name="PitchForward">Pitch forward</string>
    <string name="RollLeft">Roll left</string>
    <string name="RollRight">Roll right</string>
    <string name="TurnLeft">Turn left</string>
    <string name="TurnRight">Turn right</string>
</resources>