<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_settings_bluetooth"
            android:title="@string/connect_to_microbit" />

        <item
            android:id="@+id/nav_airbit"
            android:icon="@drawable/ic_gamepad"
            android:title="@string/airbit" />
        <item
            android:id="@+id/nav_hoverbit"
            android:icon="@drawable/ic_gamepad"
            android:title="@string/hoverbit"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />


    </group>

</menu>