<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueNorwegianFlag">

    <LinearLayout
        android:id="@+id/settings_linlay_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <ImageButton
            android:id="@+id/btn_back_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_arrow_left"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamepad"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:elegantTextHeight="true"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_gyro_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gyroscope_steering"
        android:layout_below="@+id/settings_linlay_top"
        android:textSize="30sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_switch_gyro"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/tv_gyro_settings"
        android:layout_below="@+id/settings_linlay_top"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_connect_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gyro_settings"
        android:text="@string/connect_to_micro_bit"
        android:layout_margin="10dp"/>


</RelativeLayout>