<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueNorwegianFlag"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp">

        <Button
            android:id="@+id/btn_start_hover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/start" />

        <Button
            android:id="@+id/btn_stop_hover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:text="@string/stop" />


        <RelativeLayout
            android:id="@+id/rellay_throttle_yaw_hover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">

            <ImageButton
                android:id="@+id/btn_throttle_up_hover"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_throttle_up" />


            <ImageButton
                android:id="@+id/btn_throttle_down_hover"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_throttle_down" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rellay_pitch_roll_hover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp">



        <LinearLayout
            android:id="@+id/linlay_roll_hover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_roll_left_hover"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_arrow_left"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_roll_right_hover"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="110dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="SpeakableTextPresentCheck" />



        </LinearLayout>



    </RelativeLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/segmentedGroup_hover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        app:checkedButton="@id/segment_hoverbit"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/segment_airbit_hover"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/air_bit"
            app:icon="@drawable/ic_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/segment_hoverbit_hover"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/hover_bit"
            app:icon="@drawable/ic_settings" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


</RelativeLayout>