<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueNorwegianFlag"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/linlay_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/start" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/stop" />


        <RelativeLayout
            android:id="@+id/rellay_throttle_yaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btn_throttle_up"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_throttle_up" />

            <LinearLayout
                android:id="@+id/linlay_yaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_throttle_up"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_yaw_left"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/rounded_corners"
                    android:src="@drawable/ic_rotate_left"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/btn_yaw_right"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="110dp"
                    android:background="@drawable/rounded_corners"
                    android:src="@drawable/ic_rotate_right"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_throttle_down"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/linlay_yaw"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_throttle_down" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_throttle_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:textSize="30sp"
        android:text="@string/_0"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@+id/linlay_left"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="30dp"/>

    <RelativeLayout
        android:id="@+id/rellay_pitch_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp">

        <ImageButton
            android:id="@+id/btn_pitch_forward"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_corners"
            android:src="@drawable/ic_arrow_up"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/linlay_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_pitch_forward"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_roll_left"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_arrow_left"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btn_roll_right"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="110dp"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_pitch_backwards"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/linlay_roll"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_corners"
            android:src="@drawable/ic_arrow_down"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/segmentedGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        app:checkedButton="@id/segment_airbit"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/segment_airbit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/air_bit"
            app:icon="@drawable/ic_airbit_transparent"
            app:iconSize="50dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/segment_hoverbit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/hover_bit"
            app:icon="@drawable/ic_hoverbit_transparent"
            app:iconSize="50dp"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>


</RelativeLayout>